force-app/main/default/objects/bikes_data__c/bikes_data__c.object-meta.xml
<CustomObject>
    <description>this is my spreadsheet data</description>
    <label>bikes_data</label>
    <nameField>
        <label>Primary Key</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>bikes_datas</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>