force-app/main/default/objects/bikes_data__c/fields/Brand__c.field-meta.xml
<CustomField>
    <fullName>Brand__c</fullName>
    <label>Brand</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Hero</fullName>
            </value>
            <value>
                <fullName>Bajaj</fullName>
            </value>
            <value>
                <fullName>Honda</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>