force-app/main/default/objects/bikes_data__c/fields/Engine_CC__c.field-meta.xml
<CustomField>
    <fullName>Engine_CC__c</fullName>
    <label>Engine CC</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>