force-app/main/default/objects/bikes_data__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Brand__c</columns>
    <columns>Modal__c</columns>
    <columns>Engine_CC__c</columns>
    <columns>Price__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Records</label>
</ListView>